<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="#0099cc"
    tools:context=".AFinderMain" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|fill_vertical|start"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@color/White"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/White"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/afinder" />

                <Button
                    android:id="@+id/profile_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onClickProfile"
                    android:text="@string/profile_button"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/black_overlay" />

                <Button
                    android:id="@+id/ar_view_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ar_view_button"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/black_overlay" />

                <Button
                    android:id="@+id/directory_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/directory_button"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/black_overlay" 
                    android:onClick="onClickDirectory"/>

                <Button
                    android:id="@+id/help_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/help_button"
                    android:textColor="@color/black_overlay"
                    android:textColorHint="@color/black_overlay" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:text="Copyright 2013"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black_overlay"
                    android:textSize="14dp" />

            </LinearLayout>
            
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
